Home Index Complete

--- a/EmployeeReview/Views/Home/Index.cshtml
+++ b/EmployeeReview/Views/Home/Index.cshtml
@@ -7,19 +7,24 @@
     <div class="col-md-3">
         <img src="~/Images/wecancodeit.png" />
     </div>
+    <!--Start employee review-->
     <div class="col-md-3">
         <h2>Employee Review</h2>
-        <p>Please make sure all information is correct</p>
-        <p><a class="btn btn-primary" href="~/EmployeeReviews/Index">Begin Review &raquo;</a></p>
+        <p>Please make sure all information is correct.</p>
+        <p><a class="btn btn-primary" href="~/EmployeeReviews/Create">Begin Review &raquo;</a></p>
     </div>
+    <!--Add or edit department-->
     <div class="col-md-3">
-        <h2>New Department</h2>
-        <p></p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Departments</h2>
+        <p>Click on "Create New" to add additional departments.  Click on "Department List" for current department list or edit existing department information.</p>
+        <p><a class="btn btn-primary" href="~/Departments/Create">Create New &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Departments">Department List &raquo;</a></p>
     </div>
+    <!--Add or edit employee titles-->
     <div class="col-md-3">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Titles</h2>
+        <p>Click on Create New" to add additional titles.  Click on "Title List" for current title list or edit existing titles information.</p>
+        <p><a class="btn btn-primary" href="~/Title/Create">Create New &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Title">Title List &raquo;</a></p>
     </div>
 </div>
