--- a/EmployeeReview/Views/Home/Contact.cshtml
+++ b/EmployeeReview/Views/Home/Contact.cshtml
@@ -1,17 +1,26 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+@*<h2>@ViewBag.Title.</h2>
+<h3>@ViewBag.Message</h3>*@
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+@*About page Logo *@
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+@*Start of columns*@
+<div class="row">
+    <div class="col-md-6">
+        <img src="~/Images/wecancodeit.png" />
+    </div>
+    <div class="col-md-6" id="contactAlign">
+        <address id="contactMe">
+            Kurt Weber<br />
+            We Can {Code} It<br />
+            50 Public Square #200<br />
+            Cleveland, OH 44113<br />
+        </address>
+
+        <address>
+            <strong>Email: </strong>   <a href="mailto:weberkrt@msn.com">weberkrt@msn.com</a>
+        </address>
+    </div>
+</div>
