--- a/EmployeeReview/Views/Home/Index.cshtml
+++ b/EmployeeReview/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
         <h2>Employee Review</h2>
         <p>Please make sure all information is correct.</p>
         <p><a class="btn btn-primary" href="~/EmployeeReviews/Create">Begin Review &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/EmployeeReviews">Review List &raquo;</a></p>
     </div>
     <!--Add or edit department-->
     <div class="col-md-3">
@@ -24,7 +25,7 @@
     <div class="col-md-3">
         <h2>Titles</h2>
         <p>Click on Create New" to add additional titles.  Click on "Title List" for current title list or edit existing titles information.</p>
-        <p><a class="btn btn-primary" href="~/Title/Create">Create New &raquo;</a></p>
-        <p><a class="btn btn-default" href="~/Title">Title List &raquo;</a></p>
+        <p><a class="btn btn-primary" href="~/Titles/Create">Create New &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Titles">Title List &raquo;</a></p>
     </div>
 </div>
