--- a/EmployeeReview/Views/Home/Index.cshtml
+++ b/EmployeeReview/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     <!--Start employee review-->
     <div class="col-md-3">
         <h2>Employee Review</h2>
-        <p>Please make sure all information is correct.</p>
+        <p>Click on "Begin Review" to start employee review.  Click on "Review List" to view or edit existing reviews</p>
         <p><a class="btn btn-primary" href="~/EmployeeReviews/Create">Begin Review &raquo;</a></p>
         <p><a class="btn btn-default" href="~/EmployeeReviews">Review List &raquo;</a></p>
     </div>
