--- a/EmployeeReview/Views/Departments/Create.cshtml
+++ b/EmployeeReview/Views/Departments/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model EmployeeReview.Controllers.Department
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create New Department";
 }
 
-<h2>Create</h2>
+<h2>Create New Department</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Department</h4>
+        @*<h4>Department</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -32,7 +32,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Department List", "Index")
 </div>
 
 @section Scripts {
