--- a/EmployeeReview/Views/Departments/Index.cshtml
+++ b/EmployeeReview/Views/Departments/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<EmployeeReview.Controllers.Department>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Departments";
 }
 
-<h2>Index</h2>
+<h2>Departments</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -29,5 +29,5 @@
         </td>
     </tr>
 }
-
 </table>
+@Html.ActionLink("Home", "../Home/index")
