--- a/EmployeeReview/Views/EmployeeReviews/Create.cshtml
+++ b/EmployeeReview/Views/EmployeeReviews/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model EmployeeReview.Controllers.EmployeeReview
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create New Employee Review";
 }
 
-<h2>Create</h2>
+<h2>Create New Employee Review</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>EmployeeReview</h4>
+        @*<h4>Employee Review</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -48,17 +48,18 @@
                 </div>
             </div>
         </div>
-
+      
         <div class="form-group">
             @Html.LabelFor(model => model.Comments, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Comments, new { htmlAttributes = new { @class = "form-control" } })
+            <div class = "col-md-10">
+                @Html.EditorFor(model => model.Comments, new { htmlAttributes = new { @class = "form-control"} })
                 @Html.ValidationMessageFor(model => model.Comments, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TitleID, "TitleID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <!--Changed "TitleID" to "Title".  Not sure if it will casue issues-->
+            @Html.LabelFor(model => model.TitleID, "Title", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("TitleID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.TitleID, "", new { @class = "text-danger" })
@@ -66,7 +67,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DepartmentID, "DepartmentID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <!--Changed "DepartmentID" to "Department".  Not sure if it will casue issues-->
+            @Html.LabelFor(model => model.DepartmentID, "Department", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("DepartmentID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.DepartmentID, "", new { @class = "text-danger" })
@@ -82,7 +84,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Employee Review List", "Index")
 </div>
 
 @section Scripts {
