--- a/EmployeeReview/Views/EmployeeReviews/Details.cshtml
+++ b/EmployeeReview/Views/EmployeeReviews/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model EmployeeReview.Controllers.EmployeeReview
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Employee Review Details";
 }
 
-<h2>Details</h2>
+<h2>Employee Review Details</h2>
 
 <div>
-    <h4>EmployeeReview</h4>
+    @*<h4>EmployeeReview</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -70,5 +70,6 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Employee Review List", "Index") |
+    @Html.ActionLink("Home", "../Home/Index")
 </p>
