--- a/EmployeeReview/Views/Titles/Create.cshtml
+++ b/EmployeeReview/Views/Titles/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model EmployeeReview.Controllers.Title
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create New Title";
 }
 
-<h2>Create</h2>
+<h2>Create New Title</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Title</h4>
+        @*<h4>Title</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -32,7 +32,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Title List", "Index")
 </div>
 
 @section Scripts {
