--- a/EmployeeReview/Views/Titles/Index.cshtml
+++ b/EmployeeReview/Views/Titles/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<EmployeeReview.Controllers.Title>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Create New Title";
 }
 
-<h2>Index</h2>
+<h2>Create New Title</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -31,3 +31,4 @@
 }
 
 </table>
+@Html.ActionLink("Home", "../Home/Index")
