--- a/EmployeeReview/Views/Home/Index.cshtml
+++ b/EmployeeReview/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="row">
     <!--Logo-->
-    <div class="col-md-3">
+    <div id = "picBorder" class="col-md-3">
         <img src="~/Images/wecancodeit.png" />
     </div>
     <!--Start employee review-->
@@ -15,7 +15,7 @@
         <p><a class="btn btn-default" href="~/EmployeeReviews">Review List &raquo;</a></p>
     </div>
     <!--Add or edit department-->
-    <div class="col-md-3">
+    <div class="col-md-3" id = "imagePadding">
         <h2>Departments</h2>
         <p>Click on "Create New" to add additional departments.  Click on "Department List" for current department list or edit existing department information.</p>
         <p><a class="btn btn-primary" href="~/Departments/Create">Create New &raquo;</a></p>
