--- a/EmployeeReview/Views/Departments/Index.cshtml
+++ b/EmployeeReview/Views/Departments/Index.cshtml
@@ -4,10 +4,11 @@
     ViewBag.Title = "Departments";
 }
 
-<h2>Departments</h2>
+<h2>Create New Department</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create") |
+    @Html.ActionLink("Home", "../Home/index")
 </p>
 <table class="table">
     <tr>
@@ -30,4 +31,4 @@
     </tr>
 }
 </table>
-@Html.ActionLink("Home", "../Home/index")
+
