--- a/EmployeeReview/Views/Home/About.cshtml
+++ b/EmployeeReview/Views/Home/About.cshtml
@@ -6,7 +6,7 @@
 
 @*About page Logo *@
 <div class="row">
-    <div class="col-md-6">
+    <div id = "picBorder" class="col-md-6">
         <img src="~/Images/wecancodeit.png" />
     </div>
     <div class="col-md-6" id="contactAlign">
