--- a/EmployeeReview/Views/Home/Contact.cshtml
+++ b/EmployeeReview/Views/Home/Contact.cshtml
@@ -8,13 +8,13 @@
 
 @*Start of columns*@
 <div class="row">
-    <div class="col-md-6">
+    <div id = "picBorder" class="col-md-6">
         <img src="~/Images/wecancodeit.png" />
     </div>
     <div class="col-md-6" id="contactAlign">
         <address id="contactMe">
             Kurt Weber<br />
-            We Can {Code} It<br />
+            WeCan{Code}IT<br />
             50 Public Square #200<br />
             Cleveland, OH 44113<br />
         </address>
