--- a/EmployeeReview/Views/EmployeeReviews/Create.cshtml
+++ b/EmployeeReview/Views/EmployeeReviews/Create.cshtml
@@ -5,7 +5,10 @@
 }
 
 <h2>Create New Employee Review</h2>
-
+<div>
+    @Html.ActionLink("Back to Employee Review List", "Index") |
+    @Html.ActionLink("Home", "../Home/Index")    
+</div>
 
 @using (Html.BeginForm()) 
 {
@@ -82,11 +85,6 @@
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to Employee Review List", "Index")
-</div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
