--- a/EmployeeReview/Views/Shared/_Layout.cshtml
+++ b/EmployeeReview/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("We Can Code It Employee Review", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("WeCan{Code}IT Employee Review", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -29,9 +29,9 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
+        <hr id="footerLine"/>
         <footer>
-            <p>&copy; @DateTime.Now.Year - WeCanCodeIt MVC Employee Review Application</p>
+            <p>&copy; @DateTime.Now.Year - <span id="fontChange"><span1 id="spanOne">We</span1><span2 id="spanTwo">Can</span2><span3 id="spanThree">{Code}</span3><span4 id="spanFour">IT</span4></span> MVC Employee Review Application</p>
         </footer>
     </div>
 
