--- a/EmployeeReview/Views/Titles/Index.cshtml
+++ b/EmployeeReview/Views/Titles/Index.cshtml
@@ -7,7 +7,8 @@
 <h2>Create New Title</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create") |
+    @Html.ActionLink("Home", "../Home/Index")
 </p>
 <table class="table">
     <tr>
@@ -31,4 +32,3 @@
 }
 
 </table>
-@Html.ActionLink("Home", "../Home/Index")
